# vn-one-person-company

./: .gitignore  DECISIONS.md  LICENSE  NEXT-STEPS.md  README-USER.md  README.md  SESSION-LOG.md  SPEC.md  START-HERE.md  pyproject.toml
.claude/session-state/: latest.md
.github/workflows/: ci.yml
adapters/claude-code/: install.sh
core/: __init__.py  cli.py  install_mcp.py  mcp_server.py  onboard.py  wikilinks.py
core/agents/: base_agent.py  department.py  pack_loader.py
core/brain/: gap_analyzer.py  memory.py  reader.py  schema.py
core/llm/: providers.py
core/meeting/: conditional_logic.py  debate_state.py
core/obsidian/: frontmatter.py
core/orchestrator/: document_executor.py  draft.py  execution_planner.py  flow_controller.py  research_phase.py  router.py
core/tools/: base_tool.py  competitor_research.py  tool_router.py  vn_law_search.py  vn_local_regulation.py  web_search.py
core/translator/: glossary.py  jargon_detector.py  pipeline.py  simplifier.py  terms_dictionary.yaml  tldr_generator.py
core/utils/: config.py
departments/01-governance/: department.yaml
departments/02-strategy/: department.yaml
departments/03-finance/: department.yaml
docs/: configuration.md  troubleshooting.md  user-guide.md
packs/fnb/: README.md  pack.yaml
plans/: phase-01-foundation.md  phase-02-debate-engine.md  phase-03-orchestrator-brain-first.md  phase-04-tools-translator.md  phase-05-departments-packs-byot.md  phase-06-adapters-e2e-onboard.md  plan.md  v2-mcp-sampling-260506.md  v3-vietnamization-future.md
references/: README.md
scripts/: onboard.py
(+115 files in other folders)
